changed note names to fit VR

--- a/RPi/index.html
+++ b/RPi/index.html
@@ -85,12 +85,12 @@
 				<H3 class="snare-drum-title">Snare Drum</H3>
 				<div class="snare-drum">
 					<div class="col-sm-2">
-						<button onclick="send('dS1')" type="button" class="snare-drum-hit-zone btn btn-md btn-info">
+						<button onclick="send('S1')" type="button" class="snare-drum-hit-zone btn btn-md btn-info">
 						  1
 						</button>
 					</div>
 					<div class="col-sm-2">
-						<button onclick="send('dS2')" type="button" class="snare-drum-hit-zone btn btn-md btn-info">
+						<button onclick="send('S2')" type="button" class="snare-drum-hit-zone btn btn-md btn-info">
 						  2
 						</button>
 					</div>
@@ -99,10 +99,10 @@
 						  Start Roll
 						</button>
 						<br>
-						<button onclick="send('dR1')" type="button" class="snare-drum-middle-hit-zone btn btn-md btn-info">
+						<button onclick="send('S3')" type="button" class="snare-drum-middle-hit-zone btn btn-md btn-info">
 						  3
 						</button>
-						<button onclick="send('dR2')" type="button" class="snare-drum-middle-hit-zone btn btn-md btn-info">
+						<button onclick="send('S4')" type="button" class="snare-drum-middle-hit-zone btn btn-md btn-info">
 						  4
 						</button>
 					</div>
